# topic_calc

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  calculator.cpp  calculator.h  scientific.cpp
test/: CMakeLists.txt  add_properties.cmake  calculator_test.cpp  scientific_test.cpp
